--- a/.github/workflows/auto-sync-translate-en-messages.py.yml
+++ b/.github/workflows/auto-sync-translate-en-messages.py.yml
@@ -79,7 +79,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]'
           file_pattern: '**/translate-en-messages.py'
           repository: adamlui/chatgpt-auto-continue
@@ -89,7 +89,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]'
           file_pattern: 'chatgpt-auto-continue/**'
           repository: adamlui/chatgpt-apps
@@ -99,7 +99,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]'
           file_pattern: 'chatgpt/chatgpt-auto-continue/**'
           repository: adamlui/userscripts
@@ -109,7 +109,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]'
           file_pattern: '**/translate-en-messages.py'
           repository: adamlui/python-utils
