--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]'
           file_pattern: '**'
           repository: adamlui/chatgpt-auto-continue
@@ -72,7 +72,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]'
           file_pattern: 'chatgpt-auto-continue/**'
           repository: adamlui/chatgpt-apps
@@ -82,7 +82,7 @@ jobs:
         with:
           push_options: '--force'
           add_options: '--all'
-          commit_user_email: auto-sync@chatgptevo.com
+          commit_user_email: auto-sync@kudoai.com
           commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]'
           file_pattern: 'chatgpt/chatgpt-auto-continue/**'
           repository: adamlui/userscripts
