--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -52,10 +52,16 @@ jobs:
           done
 
       - name: Sync / to adamlui/chatgpt-apps/chatgpt-auto-continue/
-        run: rsync -avhr --delete --exclude={'.*','package*json'} ${{ github.workspace }}/adamlui/chatgpt-auto-continue/ ${{ github.workspace }}/adamlui/chatgpt-apps/chatgpt-auto-continue/
+        run: |
+          rsync -avhr --delete --exclude={'.*','package*json'} \
+            ${{ github.workspace }}/adamlui/chatgpt-auto-continue/ \
+            ${{ github.workspace }}/adamlui/chatgpt-apps/chatgpt-auto-continue/
 
       - name: Sync /greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-continue/
-        run: rsync -avhr --delete ${{ github.workspace }}/adamlui/chatgpt-auto-continue/greasemonkey/ ${{ github.workspace }}/adamlui/userscripts/chatgpt/chatgpt-auto-continue/
+        run: |
+          rsync -avhr --delete \
+            ${{ github.workspace }}/adamlui/chatgpt-auto-continue/greasemonkey/ \
+            ${{ github.workspace }}/adamlui/userscripts/chatgpt/chatgpt-auto-continue/
 
       - name: Push to adamlui/chatgpt-auto-continue
         uses: stefanzweifel/git-auto-commit-action@v4
