--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -3,7 +3,7 @@ name: Sync (/ to adamlui/chatgpt-apps/chatgpt-auto-continue/) && (/greasemonkey/
 on:
   push:
     branches: main
-    paths: - '**'
+    paths: '**'
 
 jobs:
   build:
