--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-plugin-json-schema-validator": "^4.8.3",
+    "eslint-plugin-yml": "^1.12.2",
     "husky": "^9.0.10"
   },
   "scripts": {
