--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -3,7 +3,7 @@ name: Sync (/ to adamlui/chatgpt-apps/chatgpt-auto-continue/) && (/greasemonkey/
 on:
   push:
     branches: main
-    paths: '**'
+    paths: "**"
 
 jobs:
   build:
@@ -70,29 +70,29 @@ jobs:
       - name: Push to adamlui/chatgpt-auto-continue
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          push_options: '--force'
-          add_options: '--all'
+          push_options: --force
+          add_options: --all
           commit_user_email: auto-sync@kudoai.com
-          commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]'
-          file_pattern: '**'
+          commit_message: "${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]"
+          file_pattern: "**"
           repository: adamlui/chatgpt-auto-continue
 
       - name: Push to adamlui/chatgpt-apps
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          push_options: '--force'
-          add_options: '--all'
+          push_options: --force
+          add_options: --all
           commit_user_email: auto-sync@kudoai.com
-          commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]'
-          file_pattern: 'chatgpt-auto-continue/**'
+          commit_message: "${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]"
+          file_pattern: "chatgpt-auto-continue/**"
           repository: adamlui/chatgpt-apps
 
       - name: Push to adamlui/userscripts
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          push_options: '--force'
-          add_options: '--all'
+          push_options: --force
+          add_options: --all
           commit_user_email: auto-sync@kudoai.com
-          commit_message: '${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]'
-          file_pattern: 'chatgpt/chatgpt-auto-continue/**'
+          commit_message: "${{ github.event.head_commit.message }} ↞ [auto-sync from `adamlui/chatgpt-auto-continue`]"
+          file_pattern: "chatgpt/chatgpt-auto-continue/**"
           repository: adamlui/userscripts
