--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -2,8 +2,8 @@ name: Sync (/ to adamlui/chatgpt-apps/chatgpt-auto-continue/) && (/greasemonkey/
 
 on:
   push:
-    branches: main
-    paths: "**"
+    branches: [main]
+    paths: ["**"]
 
 jobs:
   build:
