--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -72,7 +72,7 @@ jobs:
 
       - name: Sync / to adamlui/chatgpt-apps/chatgpt-auto-continue/
         run: |
-          rsync -avhr --delete --exclude={'.*','package*json'} \
+          rsync -avhr --delete --exclude={'.*','eslint*','package*json'} \
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/ \
             ${{ github.workspace }}/adamlui/chatgpt-apps/chatgpt-auto-continue/
 
