Corrected git `user.email`

--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -86,7 +86,7 @@ jobs:
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-continue
           git config --global user.name "kudo-sync-bot"
-          git config --global user.email "auto-sync@adamlui.com"
+          git config --global user.email "auto-sync@kudoai.com"
           git add .
           git commit -n -m "${{ github.event.head_commit.message }} ↞ [auto-sync from `${{ steps.sync_docs.outputs.sync_src }}`]" || true
           git push
