--- a/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
+++ b/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
@@ -154,11 +154,14 @@ jobs:
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/greasemonkey/ \
             ${{ github.workspace }}/adamlui/userscripts/chatgpt/chatgpt-auto-continue/
 
+      - name: Init commiter name/email
+        run: |
+          git config --global user.name "kudo-sync-bot"
+          git config --global user.email "auto-sync@kudoai.com"
+
       - name: Push changes to adamlui/chatgpt-auto-continue
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-continue
-          git config --global user.name "kudo-sync-bot"
-          git config --global user.email "auto-sync@kudoai.com"
           git add .
           git commit -n -m "${{ steps.update-shields.outputs.commit_msg }}" || true
           git push
@@ -166,8 +169,6 @@ jobs:
       - name: Push changes to adamlui/chatgpt-apps
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-apps
-          git config --global user.name "kudo-sync-bot"
-          git config --global user.email "auto-sync@kudoai.com"
           git add .
           git commit -n -m "${{ steps.update-shields.outputs.commit_msg }} ↞ [auto-sync from \`adamlui/chatgpt-auto-continue\`]" || true
           git push
@@ -175,8 +176,6 @@ jobs:
       - name: Push changes to adamlui/userscripts
         run: |
           cd ${{ github.workspace }}/adamlui/userscripts
-          git config --global user.name "kudo-sync-bot"
-          git config --global user.email "auto-sync@kudoai.com"
           git add .
           git commit -n -m "${{ steps.update-shields.outputs.commit_msg }} ↞ [auto-sync from \`adamlui/chatgpt-auto-continue\`]" || true
           git push
