Corected spelling in step name

--- a/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
+++ b/.github/workflows/update-readme-usercount-clones-shields-3x-weekly.yml
@@ -154,7 +154,7 @@ jobs:
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/greasemonkey/ \
             ${{ github.workspace }}/adamlui/userscripts/chatgpt/chatgpt-auto-continue/
 
-      - name: Init commiter name/email
+      - name: Init committer name/email
         run: |
           git config --global user.name "kudo-sync-bot"
           git config --global user.email "auto-sync@kudoai.com"
