--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -1,4 +1,4 @@
-name: Sync (/ to adamlui/chatgpt-apps/chatgpt-auto-continue/) && (/greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-continue/)
+name: Sync _locales/* between <chrome|firefox>/extension/, then * to adamlui/chatgpt-apps/chatgpt-auto-continue/*, then greasemonkey/* to adamlui/userscripts/chatgpt/chatgpt-auto-continue/*
 
 on:
   push:
@@ -23,6 +23,7 @@ jobs:
           token: ${{ secrets.REPO_SYNC_PAT }}
           repository: adamlui/chatgpt-auto-continue
           path: adamlui/chatgpt-auto-continue
+          fetch-depth: 2
 
       - name: Checkout adamlui/chatgpt-apps
         uses: actions/checkout@v4
@@ -38,13 +39,38 @@ jobs:
           repository: adamlui/userscripts
           path: adamlui/userscripts
 
-      - name: Sync / to adamlui/chatgpt-apps/chatgpt-auto-continue/
+      - name: Sync _locales/* between <chrome|firefox>/extension/
+        run: |
+          cd ${{ github.workspace }}/adamlui/chatgpt-auto-continue
+          ff_dir="firefox/extension/_locales"
+          chrome_dir="chrome/extension/_locales"
+          
+          # Loop thru all lang dirs in firefox
+          for locale in $(find "$ff_dir" -mindepth 1 -maxdepth 1 -type d -exec basename {} \;) ; do
+              ff_file="$ff_dir/$locale/messages.json"
+              chrome_file="$chrome_dir/$locale/messages.json"
+              if [[ -f "$ff_file" && -f "$chrome_file" ]] ; then
+
+                  # Get the latest commit timestamps for both files
+                  ff_timestamp=$(git log -1 --format="%ct" -- "$ff_file" 2>/dev/null || echo 0)
+                  chrome_timestamp=$(git log -1 --format="%ct" -- "$chrome_file" 2>/dev/null || echo 0)
+          
+                  # Sync the most recently updated file to the other dir
+                  if [[ $ff_timestamp -gt $chrome_timestamp ]] ; then
+                      cp -f "$ff_file" "$chrome_file"
+                  elif [[ $chrome_timestamp -gt $ff_timestamp ]] ; then
+                      cp -f "$chrome_file" "$ff_file"
+                  fi
+              fi
+          done
+
+      - name: Sync * to adamlui/chatgpt-apps/chatgpt-auto-continue/*
         run: |
           rsync -avhr --delete --exclude={'.*','eslint*','package*json'} \
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/ \
             ${{ github.workspace }}/adamlui/chatgpt-apps/chatgpt-auto-continue/
 
-      - name: Sync /greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-continue/
+      - name: Sync greasemonkey/* to adamlui/userscripts/chatgpt/chatgpt-auto-continue/*
         run: |
           rsync -avhr --delete \
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/greasemonkey/ \
@@ -57,6 +83,13 @@ jobs:
           echo "ESCAPED_MSG<<EOF" >> $GITHUB_ENV
           echo "$COMMIT_MSG" | sed 's/`/\`/g' >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
+
+      - name: Push changes to adamlui/chatgpt-auto-continue
+        run: |
+          cd ${{ github.workspace }}/adamlui/chatgpt-auto-continue
+          git add .
+          git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from \`adamlui/chatgpt-auto-continue\`]" || true
+          git push
 
       - name: Push changes to adamlui/chatgpt-apps
         run: |
