Corrected typo in commit msg

--- a/.github/workflows/update-root-usercount-shields-weekly.yml
+++ b/.github/workflows/update-root-usercount-shields-weekly.yml
@@ -119,5 +119,5 @@ jobs:
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-apps
           git add .
-          git commit -n -m "Updated usercount shield ccounters in ChatGPT Auto-Continue root READMEs" || true
+          git commit -n -m "Updated usercount shield counters in ChatGPT Auto-Continue root READMEs" || true
           git push
