--- a/.github/workflows/update-root-usercount-shields-weekly.yml
+++ b/.github/workflows/update-root-usercount-shields-weekly.yml
@@ -84,7 +84,7 @@ jobs:
           total_users="${{ steps.get-stats.outputs.total_users }}"
           if [ "$total_users" == "0" ] ; then echo "Error getting total usercount"
           else # perform update
-            for readme in $(find . -name "README.md") ; do
+            for readme in $(find docs/ -name "README.md") ; do
               old_readme=$(<"$readme")
               sed -i -E "s|(badge/[^-]+-)[0-9.,km+]+([^?]+\?logo=weightsandbiases)|\1$total_users\2|gI" "$readme"
               new_readme=$(<"$readme")
