Changed `on` to `workflow_dispatch` for testing

--- a/.github/workflows/update-root-usercount-shields-weekly.yml
+++ b/.github/workflows/update-root-usercount-shields-weekly.yml
@@ -1,8 +1,6 @@
 name: Update usercount shields in READMEs, sync to adamlui/chatgpt-apps + adamlui/userscripts
 
-on:
-  schedule:
-    - cron: "42 5 * * 0" # every Sun @ 5:52a
+on: workflow_dispatch
 
 jobs:
   update-root-usercount-shields:
