--- a/.github/workflows/update-root-usercount-shields-weekly.yml
+++ b/.github/workflows/update-root-usercount-shields-weekly.yml
@@ -1,6 +1,8 @@
 name: Update usercount shields in READMEs, sync to adamlui/chatgpt-apps + adamlui/userscripts
 
-on: workflow_dispatch
+on:
+  schedule:
+    - cron: "42 5 * * 0" # every Sun @ 5:52a
 
 jobs:
   update-root-usercount-shields:
