--- a/.github/workflows/update-root-usercount-shields-weekly.yml
+++ b/.github/workflows/update-root-usercount-shields-weekly.yml
@@ -1,4 +1,4 @@
-name: Update usercount shields in READMEs, sync to adamlui/chatgpt-apps + adamlui/userscripts
+name: Update usercount shields in READMEs, sync to adamlui/ai-apps + adamlui/userscripts
 
 on:
   schedule:
@@ -18,12 +18,12 @@ jobs:
           repository: adamlui/chatgpt-auto-continue
           path: adamlui/chatgpt-auto-continue
 
-      - name: Checkout adamlui/chatgpt-apps
+      - name: Checkout adamlui/ai-apps
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.REPO_SYNC_PAT }}
-          repository: adamlui/chatgpt-apps
-          path: adamlui/chatgpt-apps
+          repository: adamlui/ai-apps
+          path: adamlui/ai-apps
 
       - name: Fetch/sum user counts
         id: get-stats
@@ -107,11 +107,11 @@ jobs:
             else echo "Usercount shields already up-to-date" ; fi
           fi
 
-      - name: Sync * to adamlui/chatgpt-apps/chatgpt-auto-continue/*
+      - name: Sync * to adamlui/ai-apps/chatgpt-auto-continue/*
         run: |
           rsync -avhr --delete --exclude={'.*','eslint*','package*json'} \
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/ \
-            ${{ github.workspace }}/adamlui/chatgpt-apps/chatgpt-auto-continue/
+            ${{ github.workspace }}/adamlui/ai-apps/chatgpt-auto-continue/
       
       - name: Config committer
         run: |
@@ -128,9 +128,9 @@ jobs:
           git commit -n -m "Updated usercount shield counters in root READMEs" || true
           git push
 
-      - name: Push changes to adamlui/chatgpt-apps
+      - name: Push changes to adamlui/ai-apps
         run: |
-          cd ${{ github.workspace }}/adamlui/chatgpt-apps
+          cd ${{ github.workspace }}/adamlui/ai-apps
           git add .
           git commit -n -m "Updated usercount shield counters in ChatGPT Auto-Continue root READMEs" || true
           git push
