Condensed checkout, adjusted paths accordingly

--- a/.github/workflows/publish-to-amo-on-ff-bump.yml
+++ b/.github/workflows/publish-to-amo-on-ff-bump.yml
@@ -13,14 +13,11 @@ jobs:
       - name: Checkout adamlui/chatgpt-auto-continue
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.REPO_SYNC_PAT }}
-          repository: adamlui/chatgpt-auto-continue
-          path: adamlui/chatgpt-auto-continue
+          sparse-checkout: firefox
           fetch-depth: 2
 
       - name: Check FF manifest for version bump
         run: |
-          cd ${{ github.workspace }}/adamlui/chatgpt-auto-continue
           CURRENT_VER=$(cat firefox/extension/manifest.json | grep '"version"' | sed -E 's/.*"version": "(.*)".*/\1/')
           PREV_VER=$(git show HEAD^:firefox/extension/manifest.json | grep '"version"' | sed -E 's/.*"version": "(.*)".*/\1/')
           if [ "$(printf '%s\n' "$PREV_VER" "$CURRENT_VER" | sort -V | head -n 1)" != "$CURRENT_VER" ] ; then
@@ -31,14 +28,14 @@ jobs:
       - name: Create zipball
         if: env.VERSION_CHANGED == 'true'
         run: |
-          cd ${{ github.workspace }}/adamlui/chatgpt-auto-continue/firefox/extension
+          cd firefox/extension
           zip -r ../../extension.zip .
 
       - name: Publish to AMO
         if: env.VERSION_CHANGED == 'true'
         uses: cardinalby/webext-buildtools-firefox-addons-action@v1
         with:
-          zipFilePath: "${{ github.workspace }}/adamlui/chatgpt-auto-continue/extension.zip"
+          zipFilePath: 'extension.zip'
           extensionId: 'chatgpt.auto.continue@chatgptevo.com'
           jwtIssuer: ${{ secrets.AMO_ISSUER }}
           jwtSecret: ${{ secrets.AMO_SECRET }}
