--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "eslint . --cache",
     "lint:all": "eslint .",
     "lint:fix": "eslint . --fix --cache",
-    "lint:fix-all": "eslint . --fix"
+    "lint:fix-all": "eslint . --fix",
+    "bump": "bash utils/bump.sh",
+    "bump:chrome": "bash utils/bump.sh chrome",
+    "bump:chromium": "bash utils/bump.sh chrome",
+    "bump:ff": "bash utils/bump.sh ff",
+    "bump:firefox": "bash utils/bump.sh ff"
   }
 }
