Added error suppression to publish step to reduce noise on update pending

--- a/.github/workflows/publish-to-cws-ews-on-chromium-bump.yml
+++ b/.github/workflows/publish-to-cws-ews-on-chromium-bump.yml
@@ -53,3 +53,4 @@ jobs:
           zip: extension.zip
           notes: 'Version ${{ env.CURRENT_VER }} upload'
           debug: true
+        continue-on-error: true
