--- a/.github/workflows/update-root-usercount-shields-weekly.yml
+++ b/.github/workflows/update-root-usercount-shields-weekly.yml
@@ -87,12 +87,12 @@ jobs:
           echo "Formatted total users: $formatted_total_users"
 
           # Expose as outputs for update step next
-          echo "total_users=$formatted_total_users" >> $GITHUB_ENV
+          echo "TOTAL_USERS=$formatted_total_users" >> $GITHUB_ENV
 
       - name: Update README shields
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-continue
-          total_users="${{ env.total_users }}"
+          total_users="${{ env.TOTAL_USERS }}"
           if [ "$total_users" == "0" ] ; then echo "Error getting total usercount"
           else # perform update
             for readme in $(find docs/ -name "README.md") ; do
@@ -106,17 +106,17 @@ jobs:
           fi
 
           # Set Updated flag to check in subseuqent steps
-          if [ "$users_updated" = true ] ; then echo "users_updated=true" >> $GITHUB_ENV ; fi
+          if [ "$users_updated" = true ] ; then echo "USERS_UPDATED=true" >> $GITHUB_ENV ; fi
 
       - name: Sync ** to adamlui/ai-apps/chatgpt-auto-continue/
-        if: env.users_updated == 'true'
+        if: env.USERS_UPDATED == 'true'
         run: |
           rsync -avhr --delete --exclude={'.*','eslint*','package*json'} \
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/ \
             ${{ github.workspace }}/adamlui/ai-apps/chatgpt-auto-continue/
       
       - name: Config committer
-        if: env.users_updated == 'true'
+        if: env.USERS_UPDATED == 'true'
         run: |
           gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
           git config --global commit.gpgsign true
@@ -125,7 +125,7 @@ jobs:
           git config --global user.signingkey  "${{ secrets.GPG_PRIVATE_ID }}"
 
       - name: Push changes to adamlui/chatgpt-auto-continue
-        if: env.users_updated == 'true'
+        if: env.USERS_UPDATED == 'true'
         run: |
           cd ${{ github.workspace }}/adamlui/chatgpt-auto-continue
           git add .
@@ -133,7 +133,7 @@ jobs:
           git push
 
       - name: Push changes to adamlui/ai-apps
-        if: env.users_updated == 'true'
+        if: env.USERS_UPDATED == 'true'
         run: |
           cd ${{ github.workspace }}/adamlui/ai-apps
           git add .
