--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -3,7 +3,7 @@ name: Sync _locales/ between <chromium|firefox>/extension/, then ** to adamlui/a
 on:
   push:
     branches: [main]
-    paths: ["**", "!.*", "!package*json", "!eslint.config*"]
+    paths: ["**", "!.*", "!package*.json", "!eslint.config*"]
 
 jobs:
   build:
@@ -66,7 +66,7 @@ jobs:
 
       - name: Sync ** to adamlui/ai-apps/chatgpt-auto-continue/
         run: |
-          rsync -avhr --delete --exclude={'.*','eslint*','package*json'} \
+          rsync -avhr --delete --exclude={'.*','eslint*','package*.json'} \
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/ \
             ${{ github.workspace }}/adamlui/ai-apps/chatgpt-auto-continue/
 
