--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Sync ** to adamlui/ai-apps/chatgpt-auto-continue/
         run: |
-          rsync -avhr --delete --exclude={'.*','eslint*','package*.json','requirements*.txt'} \
+          rsync -avhr --delete --exclude={'.*','eslint*','package*.json'} \
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/ \
             ${{ github.workspace }}/adamlui/ai-apps/chatgpt-auto-continue/
 
