--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint:all": "eslint .",
     "lint:fix": "eslint . --fix --cache",
     "lint:fix-all": "eslint . --fix",
+    "bump:js": "node utils/bumpJSresources",
     "bump": "bash utils/bump.sh",
     "bump:chrome": "bash utils/bump.sh --chrome",
     "bump:chromium": "bash utils/bump.sh --chrome",
@@ -35,6 +36,7 @@
     "eslint": "^9.16.0",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-yml": "^1.16.0",
-    "husky": "^9.1.7"
+    "husky": "^9.1.7",
+    "ssri": "^12.0.0"
   }
 }
