--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "lint:all": "eslint .",
     "lint:fix": "eslint . --fix --cache",
     "lint:fix-all": "eslint . --fix",
-    "bump:js": "node utils/bump/jsResources",
     "bump": "bash utils/bump/manifests.sh",
+    "bump:js": "node utils/bump/jsResources",
+    "bump:manifests": "bash utils/bump/manifests.sh",
     "bump:chrome": "bash utils/bump/manifests.sh --chrome",
     "bump:chromium": "bash utils/bump/manifests.sh --chrome",
     "bump:ff": "bash utils/bump/manifests.sh --ff",
