--- a/.github/workflows/sync-changes.yml
+++ b/.github/workflows/sync-changes.yml
@@ -53,9 +53,9 @@ jobs:
               chromium_timestamp=$(git log -1 --format="%ct" -- "$chromium_file" 2>/dev/null || echo 0)
 
               # Sync the most recently updated messages.json to the other dir
-              if [[ $ff_timestamp -ne $chromium_timestamp ]] ; then
+              if (( $ff_timestamp != $chromium_timestamp )) ; then
                 [[ "$locales_updated" != true ]] && locales_updated=true
-                if [[ $ff_timestamp -gt $chromium_timestamp ]] ; then
+                if (( $ff_timestamp > $chromium_timestamp )) ; then
                      cp -f "$ff_file" "$chromium_file"
                 else cp -f "$chromium_file" "$ff_file" ; fi
               fi
