Added `permissions` to override repo/org settings w/ least privileges required for improved security (https://cwe.mitre.org/data/definitions/275.html)

--- a/.github/workflows/update-root-usercount-shields-weekly.yml
+++ b/.github/workflows/update-root-usercount-shields-weekly.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: "42 5 * * 0" # every Sun @ 5:52a
 
+permissions:
+  contents: write
+
 jobs:
   update-root-usercount-shields:
     runs-on: ubuntu-latest
