--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bump:firefox": "bash utils/bump/extension-manifests.sh --ff"
   },
   "devDependencies": {
+    "@eslint/css": "^0.2.0",
     "@eslint/json": "^0.9.0",
     "@eslint/markdown": "^6.2.1",
     "@stylistic/eslint-plugin-js": "^2.12.1",
