--- a/.github/workflows/publish-to-cws-ews-on-chromium-bump.yml
+++ b/.github/workflows/publish-to-cws-ews-on-chromium-bump.yml
@@ -54,4 +54,5 @@ jobs:
           client-id: ${{ secrets.EWS_CLIENT_ID }}
           api-key: ${{ secrets.EWS_CLIENT_SECRET }}
           zip-path: extension.zip
+          upload-only: true
         continue-on-error: true
