--- a/.github/workflows/sync-changes-to-repos.yml
+++ b/.github/workflows/sync-changes-to-repos.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Checkout adamlui/chatgpt-auto-continue
         uses: actions/checkout@v4
         with:
+          token: ${{ secrets.REPO_SYNC_PAT }}
           path: adamlui/chatgpt-auto-continue
           fetch-depth: 2
 
